added new functions

--- a/client/admin.html
+++ b/client/admin.html
@@ -35,7 +35,7 @@
                     </label>
                     <input type="submit" value="Upload" id="submitButton">
                 </form>
-                <img src="img/signin-image.jpg" class="signup-image">
+                <!-- <img src="img/signin-image.jpg" class="signup-image"> -->
             </div>
             <div class="admin-wrapper">
                 <ul class="videos-list">
@@ -48,6 +48,7 @@
             </div>
         </main>
     </div>
+<script src="./js/admin.js"></script>
 
 </body>
 </html>
