--- a/client/register.html
+++ b/client/register.html
@@ -18,18 +18,22 @@
             <form action="#" class="site-form">
                 <label>
                     <span class="zmdi zmdi-account"></span>
-                    <input type="text" id="usernameInput" placeholder="Your name" required>
+                    <input class="input_username" type="text" id="usernameInput" placeholder="name" required>
+                </label>
+                <label>
+                    <span class="zmdi zmdi-email"></span>
+                    <input class="input_email" type="text" id="emailInput" placeholder="email" required>
                 </label>
                 <label>
                     <span class="zmdi zmdi-lock"></span>
-                    <input type="password" id="passwordInput" placeholder="Password" required>
+                    <input class="input_passwod" type="password" id="passwordInput" placeholder="Password" required>
                     <button class="zmdi zmdi-eye" type="button" id="showButton"></button>
                 </label>
-                <label class="custom-upload">
+                <!-- <label class="custom-upload">
                     <span class="zmdi zmdi-upload"></span>
                     <span class="file-name">click upload a avatar picture</span>
                     <input type="file" id="uploadInput" accept="image/*">
-                </label>
+                </label> -->
                 <input type="submit" value="Register" id="submitButton">
             </form>
             <a href="./login.html" class="sign-link">I am already member</a>
@@ -37,5 +41,6 @@
         </div>
     </div>
 
+    <script src="./js/register.js"></script>
 </body>
 </html>
