--- a/client/register.html
+++ b/client/register.html
@@ -27,14 +27,14 @@
                 <label>
                     <span class="zmdi zmdi-lock"></span>
                     <input class="input_passwod" type="password" id="passwordInput" placeholder="Password" required>
-                    <button class="zmdi zmdi-eye" type="button" id="showButton"></button>
+                    <button style="display: flex;" class="zmdi zmdi-eye" type="button" id="showButton"></button>
                 </label>
                 <!-- <label class="custom-upload">
                     <span class="zmdi zmdi-upload"></span>
                     <span class="file-name">click upload a avatar picture</span>
-                    <input type="file" id="uploadInput" accept="image/*">
+                    <input type="file" id="uploadInput">
                 </label> -->
-                <input type="submit" value="Register" id="submitButton">
+                <input class="submit" type="submit" value="Register" id="submitButton">
             </form>
             <a href="./login.html" class="sign-link">I am already member</a>
             <img src="img/signup-image.jpg" alt="signup-image" class="signup-image">
